---------------------------------------------------------------------------------------------------
Version: 1.1.8
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2025-01-02
  Bugfixes:
    - Fixed crash for planets without surface properties.
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2025-01-02
  Changes:
    - Surface conditions for gas composition.
    - New surface conditions are now off by default, unless requested by a mod.
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2025-01-02
  Bugfixes:
    - Bail when updating the starmap for a planet without an 'orbit' field.
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2025-01-02
  Bugfixes:
    - Fixed crash when space locations are added later than data.lua.
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2025-01-02
  Changes:
    - Compatibility with mods that set the 'orbit' field of planets and space locations to other objects.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025-01-01
  Changes:
    - is_space_location check enforced in planet_extend.
    - Readme note added about breaking changes will bump the major version. Special thanks added to MidnightTigger.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-01-01
  Info:
    - Readme fixes.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-01-01
  Changes: